--- a/Informe/Informe.tex
+++ b/Informe/Informe.tex
@@ -1,4 +1,4 @@
-\include{Header.tex}
+\input{Header.tex}
 
 \begin{document}
 
@@ -20,27 +20,27 @@
 %%%%%%%%%%%%%%%%%%%%%
 
 \section{Ejercicio 1}
-	\include{./Ejercicio 1/Ejercicio 1.tex}
+	\input{./Ejercicio 1/Ejercicio 1.tex}
 	
 \section{Ejercicio 2}
-	\include{./Ejercicio 2/Ejercicio 2.tex}
+	\input{./Ejercicio 2/Ejercicio 2.tex}
 
 \section{Ejercicio 3}
-	\include{./Ejercicio 3/Ejercicio 3.tex}
+	\input{./Ejercicio 3/Ejercicio 3.tex}
 
 \section{Ejercicio 4}
-	\include{./Ejercicio 4/Ejercicio 4.tex}
+	\input{./Ejercicio 4/Ejercicio 4.tex}
 	
 \section{Ejercicio 5}
-	\include{./Ejercicio 5/Ejercicio 5.tex}
+	\input{./Ejercicio 5/Ejercicio 5.tex}
 	
 \section{Ejercicio 6}
-	\include{./Ejercicio 6/Ejercicio 6.tex}
+	\input{./Ejercicio 6/Ejercicio 6.tex}
 
 \section{Ejercicio 7}
-	\include{./Ejercicio 7/Ejercicio 7.tex}
+	\input{./Ejercicio 7/Ejercicio 7.tex}
 
 \section{Ejercicio 8}
-	\include{./Ejercicio 8/Ejercicio 8.tex}
+	\input{./Ejercicio 8/Ejercicio 8.tex}
 
 \end{document}
