Desarrollo teórico del ejercicio 3

--- a/Informe/Informe.tex
+++ b/Informe/Informe.tex
@@ -1,4 +1,5 @@
 \input{Header.tex}
+\input{karnaugh-map.tex}
 
 \begin{document}
 
@@ -20,27 +21,27 @@
 %%%%%%%%%%%%%%%%%%%%%
 
 \section{Ejercicio 1}
-	\input{./Ejercicio 1/Ejercicio 1.tex}
+	\input{../Ejercicio 1/Ejercicio 1.tex}
 	
 \section{Ejercicio 2}
-	\input{./Ejercicio 2/Ejercicio 2.tex}
+	\input{../Ejercicio 2/Ejercicio 2.tex}
 
 \section{Ejercicio 3}
-	\input{./Ejercicio 3/Ejercicio 3.tex}
+	\input{../Ejercicio 3/Ejercicio 3.tex}
 
 \section{Ejercicio 4}
-	\input{./Ejercicio 4/Ejercicio 4.tex}
+	\input{../Ejercicio 4/Ejercicio 4.tex}
 	
 \section{Ejercicio 5}
-	\input{./Ejercicio 5/Ejercicio 5.tex}
+	\input{../Ejercicio 5/Ejercicio 5.tex}
 	
 \section{Ejercicio 6}
-	\input{./Ejercicio 6/Ejercicio 6.tex}
+	\input{../Ejercicio 6/Ejercicio 6.tex}
 
 \section{Ejercicio 7}
-	\input{./Ejercicio 7/Ejercicio 7.tex}
+	\input{../Ejercicio 7/Ejercicio 7.tex}
 
 \section{Ejercicio 8}
-	\input{./Ejercicio 8/Ejercicio 8.tex}
+	\input{../Ejercicio 8/Ejercicio 8.tex}
 
 \end{document}
