Avance con el punto 2

--- a/Informe/Header.tex
+++ b/Informe/Header.tex
@@ -1,34 +1,46 @@
 \documentclass[a4paper]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[spanish, es-tabla]{babel}
-\usepackage{xcolor}
+
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
 
 \usepackage{float}
 \usepackage{graphicx}
-\graphicspath{ {./Imagenes/} }
+
+\usepackage{caption}
+\usepackage{subcaption}
+\captionsetup{compatibility=false}
 
 \usepackage{multirow}
 \setlength{\doublerulesep}{\arrayrulewidth}
 
-\usepackage{tikz}
-\usetikzlibrary{matrix,calc}
+\newcommand{\quotes}[1]{``#1''}
+\newcommand\underrel[2]{\mathrel{\mathop{#2}\limits_{#1}}}
 
 \usepackage{array}
 \newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 
 \usepackage[american]{circuitikz}
-
+\usepackage{xcolor}
 \usepackage{fancyhdr}
 
-\usepackage{units} 
+\newlength{\stockheight}
+\usepackage{hyperref}
+
+\hypersetup{
+    colorlinks=true,
+    linkcolor=blue,
+    filecolor=magenta,      
+    urlcolor=blue,
+    citecolor=blue,    
+}
+
+\urlstyle{same}
 
 \pagestyle{fancy}
 \fancyhf{}
 \lhead{22.13 Electrónica III}
 \rhead{Mechoulam, Lambertucci, Martorell, Londero}
 \rfoot{Página \thepage}
-
-\newcommand{\quotes}[1]{``#1''}
