--- a/Ejercicio 3/Ejercicio 3.tex
+++ b/Ejercicio 3/Ejercicio 3.tex
@@ -24,7 +24,7 @@ En este punto se analiza la siguiente tabla de verdad:
 \label{tabla:verdad}
 \end{table}
 
-Para ello, se vale del uso de un mapa de Karnaugh. De esta forma se hallar su mínima expresión, la cuál se decidió expresar en minterminos.
+Para ello, se vale del uso de un mapa de Karnaugh. De esta forma se encuentra su mínima expresión, la cuál se decidió expresar en minterminos.
 
 \begin{figure}[H]
 \begin{centering}
@@ -73,7 +73,7 @@ Una forma de representar (\ref{equ:karsinc}) se muestra en la Figura (\ref{fig:c
 
 Desde una perspectiva sincrónica, este circuito no presenta ningún problema, ya que las señales existentes se propagan al mismo tiempo, si ningún tipo de demora en cada compuerta. Pero desde una perspectiva asincrónica no ocurre lo mismo.
 
-Se analiza el caso en el cual $a = 0$ y $b = c = 1$, siendo entonces $Y = 1$. Si se permite que $b$ cambie de 1 a 0, $Y$ debe seguir siendo 1. Si se considera la demora existente en la propagación de una señal a través de una compuerta, el cambio de $b$ puede llegar a ser visto en el nodo $\alpha$ antes que en el $\beta$, ya que para llegar a este último, la señal debe atravesar una compuerta más que para llegar al primero (la compuerta NOT previa a la AND). Esto es lo que se conoce como un riesgo estático, los cuales son visibles cuando la salida debe mantenerse constante frente a un cambio de una de las variables de entrada, pero en vez de ser así, la salida varía momentáneamente para luego volver al valor debido.
+Se analiza el caso en el cual $a = 0$ y $b = c = 1$, siendo entonces $Y = 1$. Si se permite que $b$ cambie de 1 a 0, $Y$ debe seguir siendo 1. Si se considera la demora existente en la propagación de una señal a través de una compuerta, el cambio de $b$ puede llegar a ser visto en el nodo $\alpha$ antes que en el $\beta$, ya que para llegar a este último, la señal debe atravesar una compuerta más que para llegar al primero (la compuerta NOT previa a la AND). En este caso se obtendría $\alpha = 0$ y $\beta = 0$, haciendo que $Y = 0$. Esto es lo que se conoce como un riesgo estático, los cuales son visibles cuando la salida debe mantenerse constante frente a un cambio de una de las variables de entrada, pero en vez de ser así, la salida varía momentáneamente para luego volver al valor debido.
 
 \begin{figure}[H]
 \begin{center}
@@ -84,12 +84,12 @@ Se analiza el caso en el cual $a = 0$ y $b = c = 1$, siendo entonces $Y = 1$. Si
 	
 	\draw (0) to[open] ++(5,0) to[short] ++(1,0) to[short] ++(0,1) to[short] ++(0.5,0)to[short] ++(0,-1) to[short] ++(2,0);
 \end{circuitikz}
-\caption{Salida de un circuito frente a cualquier riesgo estático.}
+\caption{Salida de un circuito frente a un error de riesgo estático.}
 \label{fig:riesgosestaticos}
 \end{center}
 \end{figure}
 
-Es posible detectar un un error potencial observando el mapa de Karnaugh, ya que en cualquier lugar que se encuentre un par de 1s adyacentes que no sean cubiertos por un grupo de minterminos, puede existir un error como el mencionado (de la misma forma ocurre con los 0s y los maxterminos). Por lo tanto, agregando algún nuevo conjunto que incluya dicho par adyacente, se evita que exista un error de transición ya que dicho conjunto se encuentra incluido en un grupo\footnote{S. Brown and Z. Vranesic, Fundamentals of digital logic with verilog design, 3rd ed. New York: McGraw-Hill, 2002.}.
+Es posible detectar un un error potencial observando el mapa de Karnaugh, ya que en cualquier lugar que se encuentre un par de 1s adyacentes que no sean cubiertos por un grupo de minterminos, puede existir un error como el mencionado (de la misma forma ocurre con los 0s y los maxterminos). Por lo tanto, agregando algún nuevo conjunto que incluya dicho par adyacente, se evita que exista un error de transición ya que dicho conjunto se encuentra incluido en un grupo.\footnote{S. Brown and Z. Vranesic, Fundamentals of digital logic with verilog design, 3er ed. New York: McGraw-Hill, 2002.}
 
 Por lo tanto, considerando todo lo dicho se vuelve a considerar el mapa de Karnaugh de la Tabla (\ref{tabla:verdad}), pero esta vez tomando un grupo adicional, representado en rojo:
 \begin{figure}[H]
@@ -104,7 +104,7 @@ Por lo tanto, considerando todo lo dicho se vuelve a considerar el mapa de Karna
     \end{Karnaughvuit}
 \par\end{centering}
 \centering
-\caption{Mapa de Karnaugh considerando un modelo asincrónico.}
+\caption{Mapa de Karnaugh en un modelo asincrónico.}
 \label{fig:karasinc}
 \end{figure}
 
@@ -114,7 +114,7 @@ La consideración presentada en la Figura (\ref{fig:karasinc}) conduce a una nue
 	\label{equ:karasinc}
 \end{equation}
 
-De la misma forma que antes, se busca representar la ecuación hallada a partir del mapa de Karnaugh mediante un circuito lógico. Esto conduce al representado en la Figura(\ref{fig:cirasinc}).
+De la misma forma que antes, se busca representar la ecuación hallada a partir del mapa de Karnaugh mediante un circuito lógico. Esto conduce al representado en la Figura (\ref{fig:cirasinc}).
 
 \begin{figure}[H]
 \begin{center}
