--- a/Ejercicio 2/Ejercicio 2.tex
+++ b/Ejercicio 2/Ejercicio 2.tex
@@ -7,7 +7,7 @@ En esta instancia del informe, se procede a comparar compuertas lógicas del tip
 
 Analizando las respectivas hojas de dato, se recopila información sobre los  valores aceptables de señal, tanto de entrada como de salida. Es así que se realiza la siguiente tabla:
 \begin{table}[H]
-\hspace*{-1.5cm}
+\centering
 \begin{tabular}{c|c|c|c|c|c|c|c|}
 \cline{2-8}
                                & $\mathbf{V_{CC}}$ \textbf{[V]} & \multicolumn{2}{c|}{\textbf{74HC02}}  & \multicolumn{2}{c|}{\textbf{74HCT02}} & \multicolumn{2}{c|}{\textbf{74LS02}} \\ \cline{3-8} 
