--- a/Informe/Header.tex
+++ b/Informe/Header.tex
@@ -2,33 +2,21 @@
 \usepackage[utf8]{inputenc}
 \usepackage[spanish, es-tabla]{babel}
 
+\usepackage[a4paper, footnotesep = 1cm, width=18cm, left=2cm, top=2.5cm, height=25cm, textwidth=18cm, textheight=25cm]{geometry}
+%\geometry{showframe}
+
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
-
 \usepackage{float}
 \usepackage{graphicx}
-
 \usepackage{caption}
 \usepackage{subcaption}
-\captionsetup{compatibility=false}
-
+\usepackage{multicol}
 \usepackage{multirow}
 \setlength{\doublerulesep}{\arrayrulewidth}
 
-\newcommand{\quotes}[1]{``#1''}
-\newcommand\underrel[2]{\mathrel{\mathop{#2}\limits_{#1}}}
-
-\usepackage{array}
-\newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
-
-\usepackage[american]{circuitikz}
-\usepackage{xcolor}
-\usepackage{fancyhdr}
-
-\newlength{\stockheight}
 \usepackage{hyperref}
-
 \hypersetup{
     colorlinks=true,
     linkcolor=blue,
@@ -37,10 +25,15 @@
     citecolor=blue,    
 }
 
-\urlstyle{same}
+\newcommand{\quotes}[1]{``#1''}
+\usepackage{array}
+\newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
+\usepackage[american]{circuitikz}
+\usepackage{fancyhdr}
+\usepackage{units} 
 
 \pagestyle{fancy}
 \fancyhf{}
 \lhead{22.13 Electrónica III}
 \rhead{Mechoulam, Lambertucci, Martorell, Londero}
-\rfoot{Página \thepage}
+\rfoot{\center \thepage}
