--- a/Informe/Header.tex
+++ b/Informe/Header.tex
@@ -5,6 +5,7 @@
 \usepackage[a4paper, footnotesep = 1cm, width=18cm, left=2cm, top=2.5cm, height=25cm, textwidth=18cm, textheight=25cm]{geometry}
 %\geometry{showframe}
 
+\usepackage{tikz}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
@@ -15,6 +16,7 @@
 \usepackage{multicol}
 \usepackage{multirow}
 \setlength{\doublerulesep}{\arrayrulewidth}
+\usepackage{xcolor}
 
 \usepackage{hyperref}
 \hypersetup{
