--- a/Ejercicio 8/Ejercicio 8.tex
+++ b/Ejercicio 8/Ejercicio 8.tex
@@ -13,56 +13,62 @@ En esta sección del informe nos centraremos en la implementación de un convert
 
 \subsection{Joystick HW-504}
 
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.5\textwidth]{Imagenes/joystick.jpg}
-	\caption{Mando de control HW-504 a utilizar.[1]}
-	\label{fig:joystick}
-\end{figure}
-
 El mando de control a utilizar está compuesto por dos potenciómetros, uno para el eje X y otro para el eje Y, y un switch accionado al apretar el mando hacia dentro. El periférico requiere de una alimentación de $5V$ y puede esquematizarse como el siguiente modelo electóonico:
 
 \begin{figure}[H]
-\centering
-\begin{circuitikz}
+	\begin{subfigure}[t]{0.49\textwidth}
+		\centering
+		\includegraphics[width=0.6\textwidth]{Imagenes/joystick.jpg}
+		\caption{Mando de control HW-504 a utilizar.[1]}
+		\label{fig:joystick}
+	\end{subfigure}
+	\begin{subfigure}[t]{0.49\textwidth}
+		\centering
+		\scalebox{0.7}{
+		\begin{circuitikz}
 
-\draw
+		\draw
 
-(0,0) node[label=west:{\color{blue}\textbf{+5V}}](5V){}
-	to[short,o-*] ++ (2, 0)
-	node[](LEFT_POTX_NODE){}
+		(-3,0) node[label=west:{\color{blue}\textbf{+5V}}](5V){}
+			to[short,o-*] ++ (2, 0)
+			node[](LEFT_POTX_NODE){}
 	
-(LEFT_POTX_NODE) to[pR, -*, name=pot-x] ++ (5, 0)
-	node[](RIGHT_POTX_NODE){}
+		(LEFT_POTX_NODE) to[pR, -*, name=pot-x] ++ (5, 0)
+			node[](RIGHT_POTX_NODE){}
 
-(pot-x.wiper) to[short, -o] ++ (0, 0)
-	node[label=north:{\color{blue}\textbf{VRx}}](){}
+		(pot-x.wiper) to[short, -o] ++ (0, 0)
+			node[label=north:{\color{blue}\textbf{VRx}}](){}
 
-(LEFT_POTX_NODE) to[short, -*] ++ (0, -2)
-	node[](LEFT_POTY_NODE){}
-	to[pR, -*, name=pot-y] ++ (5, 0)
+		(LEFT_POTX_NODE) to[short, -*] ++ (0, -2)
+			node[](LEFT_POTY_NODE){}
+			to[pR, -*, name=pot-y] ++ (5, 0)
 	
-(pot-y.wiper) to[short, -o] ++ (0,0)
-	node[label=north:{\color{blue}\textbf{VRy}}](){}
+		(pot-y.wiper) to[short, -o] ++ (0,0)
+			node[label=north:{\color{blue}\textbf{VRy}}](){}
 	
-(LEFT_POTY_NODE) to[short] ++ (0, -1.7)
-	node[](LEFT_SW_NODE){}
-	to[push button] ++ (5, 0)
-	to[short, -o] ++ (2,0)
-	node[label=east:{\color{blue}\textbf{SW}}](SW){}
+		(LEFT_POTY_NODE) to[short] ++ (0, -1.7)
+			node[](LEFT_SW_NODE){}
+			to[push button] ++ (5, 0)
+			to[short, -o] ++ (2,0)
+			node[label=east:{\color{blue}\textbf{SW}}](SW){}
 	
-(RIGHT_POTX_NODE) to[short] ++ (0, -2)
+		(RIGHT_POTX_NODE) to[short] ++ (0, -2)
 
-(RIGHT_POTX_NODE) to[short, -o] ++ (2, 0)
+		(RIGHT_POTX_NODE) to[short, -o] ++ (2, 0)
 	
-	node[label=east:{\color{blue}\textbf{GND}}]{}
+			node[label=east:{\color{blue}\textbf{GND}}]{}
+			
+		
 
-;
+		;
 
-\end{circuitikz}
-\caption{Circuito equivalente del mando HW-504 con mismos nombres que el pin-out del periférico.}
-\label{circuit:joytick_eq}
+		\end{circuitikz}
+		}
+		\caption{Circuito equivalente del mando HW-504 con mismos nombres que el pin-out del periférico.}
+		\label{circuit:joytick_eq}
+	\end{subfigure}
 \end{figure}
+
 
 \subsection{Bibliografía}
 [1]Eshop.tecnoconciencia.com.ve, 2019. [Online]. Available: https://eshop.tecnoconciencia.com.ve/eshop/wp-content/uploads/2017/08/JOYSTICK-ARDUINO.jpg. [Accessed: 23- Sep- 2019].
